Force open security gates1